fix: preserve safety correlation on legacy inputs